Fixed logo size on mobile.

--- a/assets/css/_sass/media.scss
+++ b/assets/css/_sass/media.scss
@@ -37,7 +37,6 @@
     footer {
       margin-bottom: 10px;
     }
-
   }
   .about {
     text-align: center;
@@ -45,6 +44,7 @@
     margin: 10px auto auto;
     .cover-image {
       width: 100px;
+      height: 100px;
       margin-bottom: 10px;
     }
     img {
